# dependent-lib

./: .clang-format  .gitignore  CMakeLists.txt  README.md  dense_allocator.h  dependent.h  dependent_unittests.cpp  init.sh
dependent/: CMakeLists.txt  dense_allocator.cpp  dense_allocator.h  dependent.cpp  dependent.h  future_std_stubs.h  limited_string.h  meta.h  stats_allocator.h
dependent/benchmarks/: CMakeLists.txt  read_huge_map_memory_benchmark.cpp
dependent/ut/: CMakeLists.txt  dependent_ut.cpp  future_std_stubs_ut.cpp  limited_string_ut.cpp  stats_allocator_ut.cpp
dependent/ut/utils/: CMakeLists.txt
dependent/utils/: stats_allocator.h  stats_containers.h
test_data/: read_webster_dictionary.py  words
